fix: aligned blocks horizontally

--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -10,6 +10,7 @@
     &__social {
         display: flex;
         justify-content: center;
+        align-items: center;
         flex-grow: 1;
         gap: 60px;
 
